--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -19,7 +19,7 @@
           li.list-group-item Automation
           li.list-group-item Early technology adopter
           li.list-group-item
-            a.btn.btn-danger Sign Up Now!
+            = link_to 'Apply', administrators_path, class: 'btn btn-danger'
     .col-sm-4
       .panel.panel-default.text-center
         .panel-heading
