--- a/app/views/administrators/400_question.html.slim
+++ b/app/views/administrators/400_question.html.slim
@@ -1,6 +1,8 @@
 h3
-  | What's happening when the Linux kernel is starting the OOM killer, how does it choose which process to kill first?
+  | Time to show some style.
+    Submit few urls to a gists with make/bash/perl/configurations or other files that you are proud of.
 
+  p.small Please keep your secrets away from us.
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
     = form.input :answer, as: :text
