--- a/app/views/administrators/500_question.html.slim
+++ b/app/views/administrators/500_question.html.slim
@@ -1,5 +1,8 @@
 h3
-  | What's happening when the Linux kernel is starting the OOM killer, how does it choose which process to kill first?
+  | Networking
+
+p Submit how to build simple NAT with iptables
+p Submit a the most complicated firewall you have build (with some description) :)
 
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
