--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -10,13 +10,13 @@
           h3.panel-title.price
             = image_tag('admin.png')
         ul.list-group
-          li.list-group-item Manage Linux Containers
-          li.list-group-item Nginx
-          li.list-group-item Postgres Replications
-          li.list-group-item Network managment
-          li.list-group-item Security expert
-          li.list-group-item Storage managment
-          li.list-group-item Automation
+          li.list-group-item Responsible Personal, Human
+          li.list-group-item Deep Thinking
+          li.list-group-item Computer Hacker
+          li.list-group-item Interested in Networking, Security
+          li.list-group-item Storage Managment, File systems, Speed
+          li.list-group-item High Availability, Big data
+          li.list-group-item Automation, Monitoring, Logging
           li.list-group-item Early technology adopter
           li.list-group-item
             = link_to 'Apply', administrators_path, class: 'btn btn-danger'
