--- a/app/views/answers_mailer/new_candidate.html.slim
+++ b/app/views/answers_mailer/new_candidate.html.slim
@@ -2,5 +2,7 @@ h1 New candidate #{@position}
 
 - @questions.each do |question|
   h2 = question.step
-  p = question.answer
+  pre
+    code
+      = question.answer
   p = "Question started at #{question.start} and took #{question.duration}"
