--- a/app/views/administrators/400_example_scripts.html.slim
+++ b/app/views/administrators/400_example_scripts.html.slim
@@ -5,6 +5,6 @@ h3
   p.small Please keep your secrets away from us.
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
-    = form.input :answer, as: :text
+    = form.input :answer, as: :text, input_html: { class: 'code' }
     = link_to 'skip', next_wizard_path, class: 'pull-right'
     = form.button :submit, 'Submit'
