--- a/app/views/answers_mailer/new_candidate.html.slim
+++ b/app/views/answers_mailer/new_candidate.html.slim
@@ -2,7 +2,12 @@ h1 New candidate #{@position}
 
 - @questions.each do |question|
   h2 = question.step
-  pre
-    code
-      = question.answer
+  - if question.answer.blank?
+    ul
+      - 5.times |index|
+        li = "#{index} - #{question.send("step#{index}")}"
+  - else
+    pre
+      code
+        = question.answer
   p = "Question started at #{question.start} and took #{question.duration}"
