--- a/app/views/administrators/200_find_http_header.html.slim
+++ b/app/views/administrators/200_find_http_header.html.slim
@@ -10,6 +10,7 @@ p
   ' The first is easy, and for the second add the header "Accept: application/json" in your request
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
-    = form.input :answer, as: :text
+    = form.input :line1, label: 'HTTP Header 1 value'
+    = form.input :line2, label: 'HTTP Header 2 value'
     = link_to 'skip', next_wizard_path, class: 'pull-right'
     = form.button :submit, 'Submit'
