--- a/app/assets/stylesheets/statics.css.scss
+++ b/app/assets/stylesheets/statics.css.scss
@@ -25,3 +25,13 @@ box-shadow: 0 0 10px rgba(0,0,0,.5);
 -webkit-transform: scale(1.05);
 -moz-transform: scale(1.05);
 }
+
+.homepage.statics header {
+  position: relative;
+}
+
+.homepage.statics .logo {
+  position: absolute;
+  top: -8px;
+  left: 0;
+}
