--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -1,57 +1,75 @@
-.container
-  .row
-    h3.text-center Available Positions
-    hr/
-    .col-sm-4
-      .panel.panel-default.text-center
-        .panel-heading
-          h3 System Administrator
-        .panel-body
-          h3.panel-title.price
-            = image_tag('admin.png')
-        ul.list-group
-          li.list-group-item Responsible Personal, Human
-          li.list-group-item Deep Thinking
-          li.list-group-item Computer Hacker
-          li.list-group-item Interested in Networking, Security
-          li.list-group-item Storage Managment, File systems, Speed
-          li.list-group-item High Availability, Big data
-          li.list-group-item Automation, Monitoring, Logging
-          li.list-group-item Early technology adopter
-          li.list-group-item
-            = link_to 'Apply', administrators_path, class: 'btn btn-danger'
-    .col-sm-4
-      .panel.panel-default.text-center
-        .panel-heading
-          h3 Designer
-        .panel-body
-          h3.panel-title.price
-            = image_tag('designer.png')
-        ul.list-group
-          li.list-group-item Can make Yatoto the best place in Internet
-          li.list-group-item Javascript is your favourite language
-          li.list-group-item Deep understanding of UX
-          li.list-group-item Work with photoshop
-          li.list-group-item Have a portfolio
-          li.list-group-item Know CSS as god
-          li.list-group-item Care of the responsiveness
-          li.list-group-item know all about HTML semantics
-          li.list-group-item Love to share
-          li.list-group-item
-            a.btn.btn-danger Sign Up Now!
-    .col-sm-4
-      .panel.panel-default.text-center
-        .panel-heading
-          h3 Frontend Developer
-        .panel-body
-          h3.panel-title.price
-            = image_tag('frontend.png')
-        ul.list-group
+header
+  h2.text-center
+    .logo = link_to image_tag('logo.png', height: '32px'), root_url
+    ' Available Positions
+  p Yatoto is a new generation Bulgarian social network which generates revenue from socially responsible advertisers and distributes this revenue back to society in the form of awards to its users and their causes.
 
-          li.list-group-item Know why frameworks and libraries such as Backbone, Angular, Ember and/or React exist;
-          li.list-group-item Work with bleeding edge technologies on a socially responsible project;
-          li.list-group-item Have experience developing single page applications
-          li.list-group-item Can fluently express yourself with Javascript
-          li.list-group-item Have experience with HTML and CSS
-          li.list-group-item
-            a.btn.btn-danger Sign Up Now!
+  p
+    | Check all Yatoto winners here:
+    '
+    = link_to 'http://www.yatoto.com/winners', 'http://www.yatoto.com/winners', target: '_blank'
+
+    '.
+    | Register for free
+    '
+    = link_to 'here', 'http://www.yatoto.com/winners', target: '_blank'
+    '
+    ' (BG only):
+    p We have a IT team of highly profesionalists, which develop the Yatoto core
+
+hr
+
+.row
+  .col-sm-4
+    .panel.panel-default.text-center
+      .panel-heading
+        h3 System Administrator
+      .panel-body
+        h3.panel-title.price
+          = image_tag('admin.png')
+      ul.list-group
+        li.list-group-item Responsible Personal, Human
+        li.list-group-item Deep Thinking
+        li.list-group-item Computer Hacker
+        li.list-group-item Interested in Networking, Security
+        li.list-group-item Storage Managment, File systems, Speed
+        li.list-group-item High Availability, Big data
+        li.list-group-item Automation, Monitoring, Logging
+        li.list-group-item Early technology adopter
+        li.list-group-item
+          = link_to 'Apply', administrators_path, class: 'btn btn-danger'
+  .col-sm-4
+    .panel.panel-default.text-center
+      .panel-heading
+        h3 Designer
+      .panel-body
+        h3.panel-title.price
+          = image_tag('designer.png')
+      ul.list-group
+        li.list-group-item Can make Yatoto the best place in Internet
+        li.list-group-item Javascript is your favourite language
+        li.list-group-item Deep understanding of UX
+        li.list-group-item Work with photoshop
+        li.list-group-item Have a portfolio
+        li.list-group-item Know CSS as god
+        li.list-group-item Care of the responsiveness
+        li.list-group-item know all about HTML semantics
+        li.list-group-item Love to share
+        li.list-group-item
+          a.btn.btn-danger Sign Up Now!
+  .col-sm-4
+    .panel.panel-default.text-center
+      .panel-heading
+        h3 Frontend Developer
+      .panel-body
+        h3.panel-title.price
+          = image_tag('frontend.png')
+      ul.list-group
+
+        li.list-group-item Know why frameworks and libraries such as Backbone, Angular, Ember and/or React exist;
+        li.list-group-item Work with bleeding edge technologies on a socially responsible project;
+        li.list-group-item Have experience developing single page applications
+        li.list-group-item Can fluently express yourself with Javascript
+        li.list-group-item Have experience with HTML and CSS
+        li.list-group-item
+          a.btn.btn-danger Sign Up Now!
