--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -56,7 +56,8 @@ hr
         li.list-group-item know all about HTML semantics
         li.list-group-item Love to share
         li.list-group-item
-          a.btn.btn-danger Sign Up Now!
+          = link_to 'Apply', designers_path, class: 'btn btn-danger'
+
   .col-sm-4
     .panel.panel-default.text-center
       .panel-heading
