--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,3 +18,16 @@ textarea.code {
   min-height:250px;
   max-width: 1010px;
 }
+
+textarea.ese {
+  min-height: 250px;
+  border: 2px solid #cccccc;
+  padding: 10px;
+  background-color: white;
+  color: black;
+  font-size: 1.3em;
+  resize: both;
+  max-height:500px;
+  min-height:250px;
+  max-width: 1010px;
+}
