--- a/app/views/layouts/designers.html.slim
+++ b/app/views/layouts/designers.html.slim
@@ -18,7 +18,7 @@ body class="#{controller.action_name} #{controller_path.gsub(/[-\/]/, '-')}"
     li = link_to "Home", root_url
     li.active = "Web Designer"
   .container.main
-    .icon.hidden-xs = image_tag('admin.png')
+    .icon.hidden-xs = image_tag('designer.png')
     h1 = "Web Designer"
     .jumbotron
       = yield
