--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -20,7 +20,7 @@ header
 hr
 
 .row
-  .col-sm-4
+  .col-sm-6
     .panel.panel-default.text-center
       .panel-heading
         h3 System Administrator
@@ -38,7 +38,7 @@ hr
         li.list-group-item Early technology adopter
         li.list-group-item
           = link_to 'Apply', administrators_path, class: 'btn btn-danger'
-  .col-sm-4
+  .col-sm-6
     .panel.panel-default.text-center
       .panel-heading
         h3 Designer
@@ -58,6 +58,7 @@ hr
         li.list-group-item
           = link_to 'Apply', designers_path, class: 'btn btn-danger'
 
+- if false
   .col-sm-4
     .panel.panel-default.text-center
       .panel-heading
