--- a/app/views/designers/100_welcome.html.slim
+++ b/app/views/designers/100_welcome.html.slim
@@ -7,7 +7,7 @@ h3 Welcome
     '
     = link_to 'www.yatoto.com', 'http://www.yatoto.com'
     '
-    ' the best place users spent her time
+    ' the best place where users spent their time
   p Here is a an example list of the near future work
 
   ul
