--- a/app/views/administrators/100_welcome.html.slim
+++ b/app/views/administrators/100_welcome.html.slim
@@ -21,7 +21,7 @@ h3 Welcome
       ☐ install monitoring software like nagios, zabbix etc.
       ☐ reinstall our error handling application on 64bit machine
       ☐ install and feed event analysis software
-          ☐ make yatoto work with master/slave mode https://www.assembla.com/spaces/yatoto/tickets/cardwall#/ticket:1329
+          ☐ make yatoto work with master/slave mode
       ☐ Run postgresql on master/master mode
       ☐ Support the migration to 3rd party chat with jabber
   p As you can see we have plenty of work.
