--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -28,7 +28,7 @@ hr
         h3.panel-title.price
           = image_tag('admin.png')
       ul.list-group
-        li.list-group-item Responsible Personal, Human
+        li.list-group-item Responsible Personal
         li.list-group-item Deep Thinking
         li.list-group-item Computer Hacker
         li.list-group-item Interested in Networking, Security
