--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -15,7 +15,7 @@ header
     = link_to 'here', 'http://www.yatoto.com/winners', target: '_blank'
     '
     ' (BG only):
-    p We have a IT team of highly profesionalists, which develop the Yatoto core
+    p We are an IT team of professionalists which enjoy their work and you can become part of us.
 
 hr
 
