--- a/app/views/administrators/300_torvalds_bad_habits.html.slim
+++ b/app/views/administrators/300_torvalds_bad_habits.html.slim
@@ -1,7 +1,8 @@
 h3
   | What happens when the Linux kernel starts the OOM killer, how does it choose which process to kill first?
-    Just kidding...everyone can google this.
-    Instead tell us what's a bad thing that Linus Torvalds does when he speaks, writes in forums, and conferences.
+
+p Just kidding... Everyone can google this.
+    Instead, tell us what's the odd thing that Linus Torvalds does, when he speaks, writes in forums and participates in conferences?
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
     = form.input :answer, as: :text
