--- a/app/views/administrators/500_iptables.html.slim
+++ b/app/views/administrators/500_iptables.html.slim
@@ -1,8 +1,7 @@
-h3
-  | Networking
+h3 It's time to get deep into the network administration.
 
-p Submit how to build simple NAT with iptables
-p Submit a the most complicated firewall you have build (with some description) :)
+p Submit how to build simple NAT with iptables.
+p Submit the most complicated firewall you have ever built (with some description).
 
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
