--- a/app/views/designers/300_redesign_google.html.slim
+++ b/app/views/designers/300_redesign_google.html.slim
@@ -1,8 +1,9 @@
-h3 Re-design Google search website from this
+h3 Re-design the Google search website
+p What is the CSS which you are going to use to make Google appearance look from this:
 .well
   = image_tag('google1.png', class: 'img-responsive')
 p
-  ' to look like this
+  ' to look like this:
 .well
   = image_tag('google2.png', class: 'img-responsive')
 
@@ -13,4 +14,4 @@ p
     = form.button :submit, 'Submit'
 
 small
-  ' We know that this task is not creative, but we need to be sure that you are not afraid to mess with others people code and you understand it. Note that we are not saying that our code is ugly :)
+  ' We know that this task is not creative, but we need to be sure that you are not afraid to mess with other people's code and you understand it. Don't worry, our code is better.
