--- a/app/views/designers/400_portfolio.html.slim
+++ b/app/views/designers/400_portfolio.html.slim
@@ -1,6 +1,6 @@
-h3
-  | Time to show some style.
-    Submit a link/screenshot of website that you are proud of
+h3 Time to show some style!
+
+p Submit a link/screenshot of a website that you are proud of creating
 
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
