--- a/app/views/designers/600_send_contacts.html.slim
+++ b/app/views/designers/600_send_contacts.html.slim
@@ -1,14 +1,13 @@
 h3
-  | Introduce yourself
-
-p Give us some information about you. We would love to see your...
+  | Introduce yourself!
 
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
+    p We would love to see your:
+    = form.input :line3, label: 'Your portfolio'
+    = form.input :line4, label: 'LinkedIn'
+    p Give us your contacts so that we can get in touch
+    = form.input :line5, label: 'Your name'
     = form.input :line1, label: 'E-mail'
     = form.input :line2, label: 'Mobile'
-    = form.input :line3, label: 'Github username'
-    = form.input :line4, label: 'Linked in'
-    = form.input :line5, label: 'Personal Blog/Website'
-    = link_to 'skip', next_wizard_path, class: 'pull-right'
     = form.button :submit, 'Submit'
