--- a/app/views/designers/800_thanks.html.slim
+++ b/app/views/designers/800_thanks.html.slim
@@ -1,8 +1,8 @@
 h3
-  | Thanks!
+  | You have completed the path of the Web Designer! Thank you!
 
-p In the following weeks we will look trough all the candadates and will contact the approved ones.
-  If you are good, and we beleave you are, we will have you in our databaes and contact you later.
-p It was pleasure to have you on our website.
+p In the following weeks we will go trough all candadates and will contact only the best ones.
+
+p It was pleasure to have you on our website and we'll chat soon!
 
 = link_to 'Bye', root_path, class: 'btn btn-primary'
