--- a/app/views/statics/homepage.html.slim
+++ b/app/views/statics/homepage.html.slim
@@ -5,17 +5,17 @@ header
   p Yatoto is a new generation Bulgarian social network which generates revenue from socially responsible advertisers and distributes this revenue back to society in the form of awards to its users and their causes.
 
   p
-    | Check all Yatoto winners here:
+    | Check all Yatoto
     '
-    = link_to 'http://www.yatoto.com/winners', 'http://www.yatoto.com/winners', target: '_blank'
+    = link_to 'winners', 'http://www.yatoto.com/winners', target: '_blank'
 
     '.
     | Register for free
     '
-    = link_to 'here', 'http://www.yatoto.com/winners', target: '_blank'
+    = link_to 'here', 'http://www.yatoto.com/', target: '_blank'
     '
-    ' (BG only):
-    p We are an IT team of professionalists which enjoy their work and you can become part of us.
+    ' (BG only).
+    p We are an IT team of professionalists who enjoy their work and we would love to work together. Here is who we currently need:
 
 hr
 
@@ -28,33 +28,33 @@ hr
         h3.panel-title.price
           = image_tag('admin.png')
       ul.list-group
-        li.list-group-item Responsible Personal
-        li.list-group-item Deep Thinking
+        li.list-group-item Responsible Person
+        li.list-group-item Deep Thinker
         li.list-group-item Computer Hacker
-        li.list-group-item Interested in Networking, Security
+        li.list-group-item Interested in Networking and Security
+        li.list-group-item Keen on High Availability,
         li.list-group-item Storage Managment, File systems, Speed
-        li.list-group-item High Availability, Big data
         li.list-group-item Automation, Monitoring, Logging
-        li.list-group-item Early technology adopter
+        li.list-group-item Early Technology Adopter
         li.list-group-item
           = link_to 'Apply', administrators_path, class: 'btn btn-danger'
   .col-sm-6
     .panel.panel-default.text-center
       .panel-heading
-        h3 Designer
+        h3 Web Designer
       .panel-body
         h3.panel-title.price
           = image_tag('designer.png')
       ul.list-group
-        li.list-group-item Can make Yatoto the best place in Internet
+        li.list-group-item Can make Yatoto the most beautiful web venue
         li.list-group-item Javascript is your favourite language
         li.list-group-item Deep understanding of UX
-        li.list-group-item Work with photoshop
+        li.list-group-item Work with Photoshop
         li.list-group-item Have a portfolio
-        li.list-group-item Know CSS as god
+        li.list-group-item Know CSS as God
         li.list-group-item Care of the responsiveness
-        li.list-group-item know all about HTML semantics
-        li.list-group-item Love to share
+        li.list-group-item Know all about HTML semantics
+        li.list-group-item Love to share (code, food, etc...)
         li.list-group-item
           = link_to 'Apply', designers_path, class: 'btn btn-danger'
 
