--- a/app/views/administrators/100_welcome.html.slim
+++ b/app/views/administrators/100_welcome.html.slim
@@ -1,30 +1,29 @@
-h3 Welcome
+h3 Welcome!
 
 .well
   p
     '
-      We are searching for a person who can help us build the new infrastructure of
-    = link_to 'www.yatoto.com', 'http://www.yatoto.com'
-  p Here's a small list of the tasks that we need to solve in the near future
+      We are looking for a person who can help us build the new infrastructure of
+    = link_to 'Yatoto.com', 'http://www.yatoto.com'
+  p Here's a list of the tasks that you need to be able to solve:
   pre
     |
-      Administration:
-      ☐ make nginx return 304 for the static resources taken from the inner proxy
       ☐ Rent new servers
           ☐ Planning of the servers and the services
           ☐ Design network with high availability + support of ssl connections
           ☐ Plan the storage solution
-            ☐ play with xfs
+            ☐ play with xfs, smb, etc.
             ☐ migrate old data to the new storage
-      ☐ run yatoto on docker instead of virtual machines
-      ☐ automate building of the yatoto on docker
-      ☐ install monitoring software like nagios, zabbix etc.
-      ☐ reinstall our error handling application on 64bit machine
-      ☐ install and feed event analysis software
-          ☐ make yatoto work with master/slave mode
+      ☐ Make nginx return 304 for the static resources taken from the inner proxy
+      ☐ Run Yatoto applications on Docker instead of virtual machines
+      ☐ Automate building of Yatoto on Docker
+      ☐ Install monitoring software like nagios, zabbix, etc.
+      ☐ Reinstall our error handling application on 64bit machine
+      ☐ Install and feed event analysis software
       ☐ Run postgresql on master/master mode
       ☐ Support the migration to 3rd party chat with jabber
+
   p As you can see we have plenty of work.
-  p We offer friendly environment, good salary, and profesional expirience.
-  p To apply please continue to our first screening interview ...
+  p But in exchange we offer friendly environment, profesional attitude and a good salary.
+  p If that sounds like you continue to Step 1 of the screening process!
   = link_to 'Next', next_wizard_path, class: 'btn btn-success'
