--- a/app/views/designers/100_welcome.html.slim
+++ b/app/views/designers/100_welcome.html.slim
@@ -3,19 +3,21 @@ h3 Welcome
 .well
   p
     '
-      We are searching for a person who can make
+      We are looking for a person who can transform
     '
-    = link_to 'www.yatoto.com', 'http://www.yatoto.com'
+    = link_to 'Yatoto.com', 'http://www.yatoto.com'
     '
-    ' the best place where users spent their time
-  p Here is a an example list of the near future work
+    ' into the best place where users spent their spare time.
+
+  p Here's a list of the tasks that you need to be able to solve:
 
   ul
-    li Re-think how the users use the website and modifies the UX of yatoto
-    li Design the screens for new functionality
-    li Make the designs responsive and clickable on different kind of devises.
+    li Re-think how the users use the website and modify the UX of Yatoto
+    li Design the screens for new functionalities
+    li Improve the mobile expirience for Yatoto users
+    li and many other tasks
 
   p As you can see we have plenty of work.
-  p We offer friendly environment, good salary, and profesional expirience.
-  p To apply please continue to our first screening interview ...
+  p But in exchange we offer friendly environment, profesional attitude and a good salary.
+  p If that sounds like you continue to Step 1 of the screening process!
   = link_to 'Next', next_wizard_path, class: 'btn btn-success'
