--- a/app/views/designers/200_blame_yatoto.html.slim
+++ b/app/views/designers/200_blame_yatoto.html.slim
@@ -1,9 +1,9 @@
-h3 Make yatoto better place
+h3 Make Yatoto a better place!
 p
-  ' What you would change in the design of yatoto.com so that it become more successfull?
+  ' What would you change in the current design of Yatoto.com so that it would be more user friendly?
 
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
-    = form.input :answer, label: 'Positive critique on yatoto', as: :text, input_html: { class: 'ese' }
+    = form.input :answer, label: 'Critique on Yatoto', as: :text, input_html: { class: 'ese' }
     = link_to 'skip', next_wizard_path, class: 'pull-right'
     = form.button :submit, 'Submit'
