--- a/app/views/layouts/administration.html.slim
+++ b/app/views/layouts/administration.html.slim
@@ -5,7 +5,7 @@ html class="no-js" lang="#{I18n.locale}"
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     meta name="viewport" content="width=980"
     title
-      | We want you!
+      | System Administrator
     = favicon_link_tag '/favicon.ico', type: 'image/x-icon'
     link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'
     = stylesheet_link_tag "application", media: "all"
@@ -19,7 +19,7 @@ body class="#{controller.action_name} #{controller_path.gsub(/[-\/]/, '-')}"
     li.active = "Administrator"
   .container.main
     .icon.hidden-xs = image_tag('admin.png')
-    h1 = "The path of system administrator"
+    h1 = "The path of the System Administrator"
     .jumbotron
       = yield
     - if @progressbar_value > 0
