--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html class="no-js" lang="#{I18n.locale}"
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     meta name="viewport" content="width=980"
     title
-      | We want you!
+      | Lets work together
     = favicon_link_tag '/favicon.ico', type: 'image/x-icon'
     = stylesheet_link_tag "application", media: "all"
     = javascript_include_tag "application"
