--- a/app/views/administrators/100_welcome.html.slim
+++ b/app/views/administrators/100_welcome.html.slim
@@ -26,4 +26,4 @@ h3 Welcome!
   p As you can see we have plenty of work.
   p But in exchange we offer friendly environment, profesional attitude and a good salary.
   p If that sounds like you continue to Step 1 of the screening process!
-  = link_to 'Next', next_wizard_path, class: 'btn btn-success'
+  = link_to 'Step 1', next_wizard_path, class: 'btn btn-success'
