--- a/app/views/administrators/300_torvalds_bad_habits.html.slim
+++ b/app/views/administrators/300_torvalds_bad_habits.html.slim
@@ -5,6 +5,6 @@ p Just kidding... Everyone can google this.
     Instead, tell us what's the odd thing that Linus Torvalds does, when he speaks, writes in forums and participates in conferences?
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
-    = form.input :answer, as: :text
+    = form.input :answer, as: :text, input_html: { tabindex: 1, autofocus: 'autofocus'}
     = link_to 'skip', next_wizard_path, class: 'pull-right'
     = form.button :submit, 'Submit'
