--- a/app/views/administrators/400_example_scripts.html.slim
+++ b/app/views/administrators/400_example_scripts.html.slim
@@ -4,7 +4,7 @@ p Submit few urls to a gists with make/bash/perl/configurations or other files t
 
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
-    = form.input :answer, as: :text, input_html: { class: 'code' }
+    = form.input :answer, as: :text, input_html: { tabindex: 1, autofocus: 'autofocus', class: 'code'}
     small Please keep your secrets away from us.
     p
     = link_to 'skip', next_wizard_path, class: 'pull-right'
