--- a/app/views/designers/400_ajax.html.slim
+++ b/app/views/designers/400_ajax.html.slim
@@ -6,6 +6,6 @@ p Return the concatenated result as string from two ajax requests to those URI's
 
 .well
   = simple_form_for(@question, url: wizard_path, method: :put,  html: {class: 'form-vertical' }) do |form|
-    = form.input :answer, as: :text, input_html: { class: 'code' }, label: 'Javascript/Coffee'
+    = form.input :answer, as: :text, input_html: { tabindex: 1, autofocus: 'autofocus', class: 'code'}, label: 'Javascript/Coffee'
     = link_to 'skip', next_wizard_path, class: 'pull-right'
     = form.button :submit, 'Submit'
