--- a/app/views/administrators/100_welcome.html.slim
+++ b/app/views/administrators/100_welcome.html.slim
@@ -12,7 +12,7 @@ h3 Welcome!
           ☐ Planning of the servers and the services
           ☐ Design network with high availability + support of ssl connections
           ☐ Plan the storage solution
-            ☐ play with xfs, smb, etc.
+            ☐ play with zfs, smb, etc.
             ☐ migrate old data to the new storage
       ☐ Make nginx return 304 for the static resources taken from the inner proxy
       ☐ Run Yatoto applications on Docker instead of virtual machines
