--- a/app/views/layouts/designers.html.slim
+++ b/app/views/layouts/designers.html.slim
@@ -13,6 +13,16 @@ html class="no-js" lang="#{I18n.locale}"
 
     = csrf_meta_tags
 
+    javascript:
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-57194415-1', 'auto');
+      ga('send', 'pageview');
+
+
 body class="#{controller.action_name} #{controller_path.gsub(/[-\/]/, '-')}"
   ol.breadcrumb
     li = link_to "Home", root_url
