--- a/app/views/administrators/100_welcome.html.slim
+++ b/app/views/administrators/100_welcome.html.slim
@@ -24,6 +24,6 @@ h3 Welcome!
       ☐ Support the migration to 3rd party chat with jabber
 
   p As you can see we have plenty of work.
-  p But in exchange we offer friendly environment, profesional attitude and a good salary.
+  p But in exchange we offer friendly environment, profesional attitude, central office location and a good salary.
   p If that sounds like you continue to Step 1 of the screening process!
   = link_to 'Step 1', next_wizard_path, class: 'btn btn-success'
